--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-    .red-hat-display {
+.red-hat-display {
   font-family: "Red Hat Display", sans-serif;
 }
 
@@ -17,8 +17,8 @@
 }
 
 [data-theme="Light"] {
-    --main-col: #CDC9BE;
-    --second-col: #383838;
+  --main-col: #cdc9be;
+  --second-col: #383838;
 }
 
 body {
@@ -26,84 +26,86 @@ body {
   background-color: var(--main-col);
   color: var(--second-col);
 }
-    footer {
-      text-align: center;
-      padding: 2rem;
-      font-family: "Red Hat Display", sans-serif;
-      font-weight: 300;
-      font-size: 90%;
-      color: var(--second-col);
-    }
+footer {
+  text-align: center;
+  padding: 2rem;
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 300;
+  font-size: 90%;
+  color: var(--second-col);
+}
 
-     .text {
-    font-family: "Red Hat Display", sans-serif;
-    font-weight: 300;
-    letter-spacing: 7px;
-    font-size: 270%;
-  }
-  .intro {
-    width: 970px;
-    margin: 0 auto;
-    height: 900px;
-    margin-top: 20px;
-  }
+.text {
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 300;
+  letter-spacing: 7px;
+  font-size: 270%;
+}
+.intro {
+  width: 970px;
+  margin: 0 auto;
+  height: 920px;
+  margin-top: 20px;
+}
 
-  .titles {
-    font-family: "Nixie One", system-ui;
-    font-weight: lighter;
-    display: flex;
-    font-size: 246%;
-    font-weight: 100;
-    text-align: center;
-    justify-content: space-between;
-  }
-  .code {
-    font-family: "Libre Barcode 128 Text", system-ui;
-    font-weight: 400;
-    font-style: normal;
-    letter-spacing: 22px;
-    font-size: 300%;
-    margin-left: 2rem;
-  }
+.titles {
+  font-family: "Nixie One", system-ui;
+  font-weight: lighter;
+  display: flex;
+  font-size: 246%;
+  font-weight: 100;
+  text-align: center;
+  justify-content: space-between;
+  margin-bottom: 4rem;
+}
+.code {
+  font-family: "Libre Barcode 128 Text", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: 22px;
+  font-size: 300%;
+  margin-left: 2rem;
+}
 
-  .info {
-    width: 860px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    gap: 20px;
-    margin-top: 2rem;
-    font-size: 170%;
-  }
+.info {
+  width: 870px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  gap: 40px;
+  margin-top: 2rem;
+  font-size: 170%;
+  transform: translate(-100px, 0);
+}
 
-  .p1 {
-    grid-column: 1/7;
-    grid-row: 1/2;
-    font-weight: 500;
-  }
-  .p2 {
-    grid-column: 2/5;
-    grid-row: 1/2;
-    opacity: 0.2;
-    transform: translate(30px, 30px);
-  }
+.p1 {
+  grid-column: 1/7;
+  grid-row: 1/2;
+  font-weight: 500;
+}
+.p2 {
+  grid-column: 2/5;
+  grid-row: 1/2;
+  opacity: 0.2;
+  transform: translate(30px, 30px);
+}
 
-   .main {
-    font-family: "Red Hat Display", sans-serif;
-    margin: 0 auto;
-    margin-top: 4rem;
-    width: 80%;
-  }
-  .main h1 { 
-    text-align: center;
-    padding: 2rem;
-    margin: 0 auto;
-  }
-  .main .border {
-    border-bottom: 1px solid var(--second-col);
-  }
-    .main .p {
-    width: 625px;
+.main {
+  font-family: "Red Hat Display", sans-serif;
+  margin: 0 auto;
+  margin-top: 4rem;
+  width: 80%;
+}
+.main h1 {
+  text-align: center;
+  padding: 2rem;
+  margin: 0 auto;
+}
+.main .border {
+  border-bottom: 1px solid var(--second-col);
+}
+.main .p {
+  width: 625px;
   margin: 0 auto;
   text-align: center;
 }
@@ -113,112 +115,118 @@ body {
   box-sizing: border-box;
 }
 [data-theme="Light"] {
-  --main-col: #CDC9BE;
+  --main-col: #cdc9be;
   --second-col: #383838;
 }
 body {
   font-family: "Montserrat", sans-serif;
   color: var(--second-col);
 }
-  .cap2 {
-    font-weight: 500;
-        text-transform: uppercase;
-  }
-  .grid1 {
-    padding: 2rem;
-    gap: 2rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-  .inner-info {
-    text-align: center;
-  }
-  .inner-info p {
-    margin: 1.5rem auto;
-  }
-  .cap {
-    font-size: 120%;
-    text-transform: uppercase;
-    font-weight: 600;
-  }
+.cap2 {
+  font-weight: 500;
+  text-transform: uppercase;
+}
+.grid1 {
+  padding: 2rem;
+  gap: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.inner-info {
+  text-align: center;
+}
+.inner-info p {
+  margin: 1.5rem auto;
+}
+.cap {
+  font-size: 120%;
+  text-transform: uppercase;
+  font-weight: 600;
+}
 
-  .pic-box.one {
-    grid-column: span 2;
-    grid-row: span 3;
-  }
-  .pic-box.two {
-    grid-column: 3/5;
-    grid-row: span 2;
-  }
-  .pic-box.three {
-    grid-column: 3/5;
-    grid-row: span 1;
-  }
-  .pic-box.eight {
-    grid-column: 3/5;
-    grid-row: 4/7;
-  }
-  .pic-box.sixsecond {
-    grid-column: 1/3;
-    grid-row: span 2;
-  }
-    .pic-box.six {
-    grid-column: 1/3;
-  }
-  .pic-box.seven {
-    grid-column: 1/3;
-  }
+.pic-box.one {
+  grid-column: span 2;
+  grid-row: span 3;
+}
+.pic-box.two {
+  grid-column: 3/5;
+  grid-row: span 2;
+}
+.pic-box.three {
+  grid-column: 3/5;
+  grid-row: span 1;
+}
+.pic-box.eight {
+  grid-column: 3/5;
+  grid-row: 4/7;
+}
+.pic-box.sixsecond {
+  grid-column: 1/3;
+  grid-row: span 2;
+}
+.pic-box.six {
+  grid-column: 1/3;
+}
+.pic-box.seven {
+  grid-column: 1/3;
+}
 
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(6, 200px);
-    gap: 10px;
-    max-width: 1150px;
-    margin: auto;
-    margin-top: 3rem;
-  }
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(6, 200px);
+  gap: 10px;
+  max-width: 1150px;
+  margin: auto;
+  margin-top: 3rem;
+}
 
-  .pic-box {
-    width: 100%;
-    overflow: hidden;
-    border-radius: 8px;
-    cursor: pointer;
-  }
+.pic-box {
+  width: 100%;
+  overflow: hidden;
+  border-radius: 8px;
+  cursor: pointer;
+}
 
-  .pic-box img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-    transition: transform 0.3s ease;
-  }
+.pic-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  transition: transform 0.3s ease;
+}
 
-  .pic-box img:hover {
-    transform: scale(1.05);
-  }
+.pic-box img:hover {
+  transform: scale(1.05);
+}
 
-  /* Lightbox styling */
-  #lightbox {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.8);
-    display: none;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-  }
+/* Lightbox styling */
+#lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
 
-  #lightbox img {
-    max-width: 90%;
-    max-height: 90%;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-    border-radius: 8px;
-  }
+#lightbox img {
+  max-width: 90%;
+  max-height: 90%;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+}
 
-  #lightbox:target {
-    display: flex;
-  }
+#lightbox:target {
+  display: flex;
+}
+
+.profil {
+  width: 230%;
+  grid-row: span 3;
+  grid-column: span 3;
+}
